--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint",
-    "test": "vitest",
-    "test:run": "vitest run"
+    "lint": "eslint"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.56.1",
