--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.56.1",
+    "@vercel/analytics": "^1.5.0",
     "next": "15.5.2",
     "nodemailer": "^7.0.6",
     "react": "19.1.0",
